--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -51,19 +51,18 @@
                 </div>
                 <div class="flow-root">
                     <ul id="blockedUrlList" role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-                        <!--<li class="py-3 sm:py-4">
-                            <div class="flex items-center space-x-4">
-                                <div class="flex-1 items-center min-w-0">
-                                    <p class="text-base text-gray-500 dark:text-gray-400">www.facebook.com</p>
+                        <li class="py-3 sm:py-4">
+                            <form id="addUrlForm">   
+                                <label for="addUrlInput" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Add URL</label>
+                                <div class="relative">
+                                    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                                    </div>
+                                    <input type="search" name="inputBox" id="addUrlInput" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Add Url to block" required>
+                                    <button type="button" name="submitButton" class="text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add</button>
                                 </div>
-                                <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                    <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" >
-                                        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                                        <span class="sr-only">Remove URL</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </li>-->
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
