Alerts now grow upwards from the bottom and are limited to 2
- Only 2 alerts can now be present at the same time, if a third is added, the oldest one is overwritten. This number can be changed.
- Alerts now have a fixed position at the bottom of the popup window and grow upwards.
- Renamed some files and variables.
- Fixed a bug where alerts were not deleted (because I forgot to delete them after they are hidden... whoopsie!)

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -84,9 +84,7 @@
                 </div>
             </div>
         </div>
-        <div id="toastAlertContainer">
-            
-        </div>
+        <div id="alertContainer" class="fixed bottom-2 left-3 right-3"></div>
         <script type="module" src="popup.js"></script>
         <script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
     </body>
