The custom page now displays a motivational quote
- The motivational quote is fetched from 'https://quotes.free.beeceptor.com/quotes'. However it only contains 10 quotes. Might  switch to a different API later on.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<head>
+  <title>Motivational Quotes</title>
+</head>
+<body>
+  <h1>Motivational Quotes</h1>
+  <div id="quote"></div>
+  <div id="author"></div>
+
+  <script type="module" src="index.js"></script>
+</body>
 </html>
