--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -61,7 +61,7 @@
         </div> 
       </div>
     </section>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
     <script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
