--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div id="alertContainer" class="fixed bottom-2 left-3 right-3 z-50"></div>
-        <script type="module" src="popup.js"></script>
+        <script type="module" src="./scripts/popup.js"></script>
         <script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
     </body>
 </html>
